
* .C can't use R's longVectors, which can lead to bam failing on very large
  datasets. Probably requires extensive re-writing using .Call.

* t2 in bam(...,discrete=TRUE) - not treated as tensor products at 
present, and reparameterization needs checking (also for bam). 

* bam(...,discrete=TRUE) has no option to use the identical
  discretizaton to that used in fitting when predicting.

1.9-1

* Revised C code underlying mvn family to allow larger problems, via use of 
  R long vectors. 

* Revised gfam to work correctly with bam(...,discrete=FALSE). Subsetting 
  in bgam.fit was incorrect for gfam. Thanks to Dave Miller for reporting it. 

* Correction of ziplss residual computation - incorrect probability of non
  zero used. Thanks to Xiao Liang. 

* correction of ginla integration weights (correcting typo from Rue et al. 
  2009). Thanks to Paul Van Dam-Bates. 

1.9-0

*** NCV smoothing parameter estimation now available for most models. See ?NCV.

*** 'gfam' allows reponse variables to be from several different families. 

* Restriction that number of coefficients must be fewer than number of data 
  removed. 

* Fix to tensor product constructor to allow matrix factor arguments to be 
  handled correctly (previously failed). Thanks to Dave Miller.

* removed argument 'pers' from 'plot.gam' (deprecated since 1.8-23, Nov 2017).

* removed "nlm.fd" optimizer (deprecated since 1.8-19, Sept 2017). 

* removed discrete method prediction from discrete bam objects fitted 
  before 1.8-32 (deprecated since then). 


* 'multinom' variance fix for K>=3 cases. A counter was initialized in the wrong
  place. Thanks to Max Goplerud for finding and reporting this.

* NCV variance estimation improvements + na handling.

* 'in.out' argument added for 'bam'.

* slight internal change to mgcv:::get.var to enable user defined functions 
  in arguments of smooths to work. 

* smooth2random tweak to guarantee same eigenvector sign everytime for same 