@@ -24,9 +24,12 @@ R_CallMethodDef CallMethods[] = {
   {"Rkdnearest",(DL_FUNC)&Rkdnearest,4},
   {"Rkradius",(DL_FUNC)&Rkradius,5},
   {"sXWXd",(DL_FUNC)&sXWXd,5},
+  {"CXWXd0",(DL_FUNC)&CXWXd0,15},
   {"CXWXd1",(DL_FUNC)&CXWXd1,17},
   {"sXbd",(DL_FUNC)&sXbd,3},
+  {"CXbd",(DL_FUNC)&CXbd,13},
   {"sXyd",(DL_FUNC)&sXyd,3},
+  {"CXWyd",(DL_FUNC)&CXWyd,17},
   {"sdiagXVXt",(DL_FUNC)&sdiagXVXt,4},
   {"CdiagXVXt",(DL_FUNC)&CdiagXVXt,14},
   {"stmm",(DL_FUNC)&stmm,1},
